[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/Bee/SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Bee/Bee.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Bee/SpriteSheet_n.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Flying"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.813, 17.6796 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 29.0196 )

[node name="Bee" type="KinematicBody2D" groups=[
"Enemies",
]]
script = ExtResource( 2 )
speed = 50
gravity = -450

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
normal_map = ExtResource( 3 )
hframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flying = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.68829, 4.91771 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 60.52, 11.72 )
shape = SubResource( 3 )

[node name="CastLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )

[node name="CastRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
